# AXCodeTemplate

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  THIRDPARTYNOTICES.txt
examples/: CMakeLists.txt
examples/01_inbuilt_inputs_outputs/: 01_doutput_blink.cpp  02_dinput_doutput.cpp  03_latching_relay.cpp
examples/02_terminal/: 01_terminal_output.cpp  02_terminal_input.cpp  03_array_output.cpp
examples/03_time_functions/: 01_delay_using_systicks.cpp  02_delay_using_ton.cpp  03_delay_using_tof.cpp  04_get_date.cpp  05_set_date.cpp
examples/04_expansion_modules/: 01_module_input.cpp  02_modules_input_output.cpp  03_on_off_regulator.cpp  04_setup_dinput.cpp  05_setup_analog_input.cpp  06_reset_modules.cpp  07_setup_pwm.cpp  08_module_save_settings.cpp
examples/05_modbus_rtu_master/: 01_modbus_master_read.cpp  02_modbus_master_write.cpp  03_modbus_ecd1.cpp  04_modbus_ecd2.cpp  05_modbus_ecv1.cpp  06_modbus_master_buffer_auto_poll.cpp
examples/06_modbus_rtu_slave/: 01_modbus_slave.cpp
examples/07_retain_memory/: 01_retain_memory.cpp
examples/08_serial_port/: 01_serial_port_read.cpp  02_serial_port_write.cpp  03_serial_port_write_read.cpp
include/: pou_manager.h
lib/: CMakeLists.txt
lib/ulib/: CMakeLists.txt  README.md
lib/ulib/doc/: ulib_fb.dox  ulib_fb_triggers.dox
lib/ulib/examples/: CMakeLists.txt
lib/ulib/examples/include/ulib/example/: fb_etriga_example.h
lib/ulib/examples/src/: fb_etriga_example.cpp  fb_timers_example.cpp  fb_triggers_example.cpp
lib/ulib/include/: ulib.h
lib/ulib/include/ulib/: fb_timers.h  fb_triggers.h
src/: pou1.cpp  pou2.cpp  pou3.cpp  pou4.cpp  pou_manager.cpp
